syntax = "proto3";

package grpc;

option go_package = "github.com/aaanger/event-analytics/grpc";

message EventRequest {
  int64 user_id = 1;
  string url = 2;
  string timestamp = 3;
}

message EventResponse {
  string status = 1;
}

service Event {
  rpc SendEvent (EventRequest) returns (EventResponse);
}

